# baumanka

./: Dz2(geom 5).cpp  Dz2(geom4).cpp  Dz_Infa2.cpp  Laba_4.sql  Labor_4.cpp  Lekciya_6(1).cpp  RK_2(SQL).sql  RK_2.cpp  Seminar_12(1).cpp  Seminar_13(1).cpp  Seminar_2(10).cpp  Seminar_2(2).cpp  Seminar_2(3).cpp  Seminar_2(6).cpp  Seminar_2(7).cpp  Seminar_2(8).cpp  check_process.sh  Лабораторная работа 1.cpp  Лабораторная1 ИНФА.cpp
DzGeom/: Dz2(geom1_3).cpp  Dz2(geom2).cpp  Dz2(geom4).cpp  Dz2(geom6).cpp  Dz2(geom7).cpp  Dz2(geom8).cpp  Dz2(geom9).cpp
DzSeminar_10/: Choro_1.cpp  Choro_2.cpp  Choro_3.cpp  Choro_5.cpp  Seminar_10(1).cpp  Seminar_10(10).cpp  Seminar_10(11).cpp  Seminar_10(2).cpp  Seminar_10(3).cpp  Seminar_10(4).cpp  Seminar_10(5).cpp  Seminar_10(6).cpp  Seminar_10(7).cpp  Seminar_10(8).cpp  Seminar_10(9).cpp
DzSeminar_11/: Choro_4.cpp  Seminar_11(1).cpp  Seminar_11(10).cpp  Seminar_11(11).cpp  Seminar_11(12).cpp  Seminar_11(2).cpp  Seminar_11(3).cpp  Seminar_11(4).cpp  Seminar_11(5).cpp  Seminar_11(6).cpp  Seminar_11(7).cpp  Seminar_11(8).cpp  Seminar_11(9).cpp
DzSeminar_12/: Seminar_12(1).cpp  Seminar_12(2).cpp  Seminar_12(3).cpp  Seminar_12(4).cpp  Seminar_12(5).cpp  Seminar_12(6).cpp  Seminar_12(7).cpp
DzSeminar_13/: Seminar_13(1).cpp  Seminar_13(2).cpp  Seminar_13(3).cpp  Seminar_13(4).cpp  Seminar_13(5).cpp  Seminar_13(6).cpp
DzSeminar_2/: Seminar_2(1).cpp  Seminar_2(10).cpp  Seminar_2(11).cpp  Seminar_2(2).cpp  Seminar_2(4).cpp  Seminar_2(5).cpp  Seminar_2(7).cpp  Seminar_2(8).cpp  Seminar_2(9).cpp
DzSeminar_3/: Seminar_3(1).cpp  Seminar_3(2).cpp  Seminar_3(3).cpp  Seminar_3(4).cpp  Seminar_3(5).cpp  Seminar_3(6).cpp  Seminar_3(7).cpp  Seminar_3(8).cpp
DzSeminar_4/: Seminar_4(1).cpp  Seminar_4(2).cpp  Seminar_4(3).cpp  Seminar_4(4).cpp  Seminar_4(5).cpp  Seminar_4(6).cpp  Seminar_4(7).cpp  Seminar_4(8).cpp
DzSeminar_5/: Seminar_5(1,2).cpp  Seminar_5(10).cpp  Seminar_5(11).cpp  Seminar_5(12).cpp  Seminar_5(13).cpp  Seminar_5(14).cpp  Seminar_5(15).cpp  Seminar_5(3).cpp  Seminar_5(4).cpp  Seminar_5(5).cpp  Seminar_5(6).cpp  Seminar_5(7).cpp  Seminar_5(8).cpp  Seminar_5(9).cpp
DzSeminar_6/: Seminar_6(1).cpp  Seminar_6(10).cpp  Seminar_6(11).cpp  Seminar_6(2).cpp  Seminar_6(3).cpp  Seminar_6(4).cpp  Seminar_6(5).cpp  Seminar_6(6).cpp  Seminar_6(7).cpp  Seminar_6(8).cpp  Seminar_6(9).cpp
DzSeminar_7/: Seminar_7(1).cpp  Seminar_7(10).cpp  Seminar_7(11).cpp  Seminar_7(12).cpp  Seminar_7(13).cpp  Seminar_7(14).cpp  Seminar_7(15).cpp  Seminar_7(16).cpp  Seminar_7(2).cpp  Seminar_7(3).cpp  Seminar_7(4).cpp  Seminar_7(5).cpp  Seminar_7(6).cpp  Seminar_7(7).cpp  Seminar_7(8).cpp  Seminar_7(9).cpp
DzSeminar_8/: Seminar_8(1).cpp  Seminar_8(10).cpp  Seminar_8(2,3).cpp  Seminar_8(4).cpp  Seminar_8(5).cpp  Seminar_8(6).cpp  Seminar_8(7).cpp  Seminar_8(8).cpp  Seminar_8(9).cpp
DzSeminar_9/: Semiinar_9(8).cpp  Seminar_9(1).cpp  Seminar_9(10).cpp  Seminar_9(11).cpp  Seminar_9(12).cpp  Seminar_9(13).cpp  Seminar_9(14).cpp  Seminar_9(15).cpp  Seminar_9(2).cpp  Seminar_9(3).cpp  Seminar_9(4).cpp  Seminar_9(5).cpp  Seminar_9(6).cpp  Seminar_9(7).cpp  Seminar_9(9).cpp
Ekzamen/online-store/: .gitignore  CMakeLists.txt  README.md
Ekzamen/online-store/include/: DatabaseConnection.h  Order.h  Payment.h  Product.h  User.h
Ekzamen/online-store/sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
Ekzamen/online-store/src/: DatabaseConnection.cpp  Order.cpp  Payment.cpp  Product.cpp  User.cpp  main.cpp
Lab/: Laba_4.sql  Labor_4.cpp
Lekciya_6/: Lekciya_6(1).cpp  Lekciya_6(2).cpp  Lekciya_6(3).cpp
Modul2_DZ_INFA(variant2)/: Dz(Variant_2).sql  Dz_Infa2.cpp
RK_2(INFA)/: RK_2(SQL).sql  RK_2.cpp
lab/: Лабораторная 1_ОАИП.cpp
lab/Labworks(INFA)/Labwork3/: LabaSQL_1.sql
lab/Labworks(OAIP)/: Labwork_3(OAIP).cpp
lab/Labworks(OAIP)/Labwork1/: Лабораторная 1_ОАИП.cpp
lab/Labworks(OAIP)/Labwork2/: Labwork_2(OAIP).cpp
lab/Labworks(OAIP)/Labwork3/: Labwork_3(OAIP).cpp
